fixed list text overflow & layout styles

--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -9,8 +9,9 @@
 .layout {
   width: 100%;
   height: 100%;
+  min-width: 300px;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
   grid-template-rows: 50px 1fr auto;
   grid-template-areas:
     "topbar"
@@ -49,7 +50,6 @@ header {
 
 main {
   grid-area: content;
-  width: 100%;
   padding: 10px 40px;
   min-height: fit-content;
   display: flex;
@@ -82,3 +82,15 @@ footer {
   background-image: url("../../../assets/bg-light.svg");
 }
 
+// ******** Media Queries *********
+@media screen and (max-width: 800px){
+  main{
+    padding: 10px 20px;
+  }
+}
+
+@media screen and (max-width: 600px){
+  main{
+    padding: 10px;
+  }
+}
