--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -6,7 +6,9 @@
 }
 
 .list {
+  width: 100%;
   height: 60px;
+  min-width: 200px;
   border-radius: 4px;
   border: 1px solid $light-1;
   background-color: $light-1;
@@ -24,6 +26,10 @@
     width: 100%;
     text-align: start;
     @include text-style(16px, 500, $dark-1, Poppins);
+    text-overflow: ellipsis;
+    overflow: hidden;  
+    white-space: nowrap;
+
   }
 
   &:hover {
